Fix: Blog-post--large header alignment on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -163,7 +163,7 @@ main {
     }
 
     .blog-post--large__content {
-        top: 93px;
+        top: 20px;
     }
 
     .blog-post--large__footer {
